@@ -1,3 +1,7 @@
+2009-04-14  Stephen Shaw  <sshaw@decriptor.com>
+
+	* IDataAccess.cs: Updated method parameters
+
 2009-04-04  Stephen Shaw  <sshaw@decriptor.com>
 
 	* IDataAccess.cs: Extended out some of the database stuff.
